# ml-tech-assessment

./: .dockerignore  .env.example  Dockerfile  README.md  assessment.md  pyproject.toml
app/: configurations.py  main.py  prompts.py
app/adapters/: in_memory_repository.py  openai.py
app/api/: routes.py  schemas.py
app/domain/: exceptions.py  models.py
app/dto/: llm_response.py
app/ports/: __init__.py  llm.py  repository.py
app/services/: transcript_service.py
tests/adapters/: mock_data.py  test_in_memory_repository.py  test_openai.py
tests/api/: test_routes.py
tests/services/: test_transcript_service.py
